<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/childRadioButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/app_name"
        android:textSize="34sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/pizzaImageText"
        app:srcCompat="@drawable/pizza" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="@string/hintNumber"
        android:ems="10"
        android:hint="@string/hintNumber"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guestType" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonChild"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/childRadioButtonText" />

        <RadioButton
            android:id="@+id/radioButtonTeenager"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/teenagerRadioText" />

        <RadioButton
            android:id="@+id/radioButtonAdult"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/adultsRadioButton" />


    </RadioGroup>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/resultText" />

    <TextView
        android:id="@+id/textViewCost"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/costText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clear"
            android:text="@string/clearText" />

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculate"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/calculateText" />
    </LinearLayout>
</LinearLayout>